Fetches always the latest instance of a service